--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "name": "Queen Manu-MD",
   "description": "A WhatsApp bot based on Baileysjs library (Ts+Js) with Multi Device support",
   "repository": "https://github.com/Senesh18/Queen-Manu-MD",
-  "logo": "https://wallpapercave.com/wp/wp6471201.jpg",
+  "logo": "https://wallpapercave.com/w/uwp3580267",
   "keywords": ["nodejs", "bot", "whatsapp bot", "whatsapp automation", "multi device"],
   "buildpacks": [
     {
