--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "CYNER-PANDA-MD",
+  "name": "Queen-Manu-MD",
   "description": "whatsapp md bot build with nodejs",
   "repository": "https://github.com/Senesh18/Queen-Manu-MD",
-  "logo": "https://github.com/Senesh18/Queen-Manu-MD",
+  "logo": "https://wallpapercave.com/wp/wp6471201.jpg",
   "keywords": ["nodejs", "bot", "whatsapp bot", "whatsapp automation", "multi device"],
   "buildpacks": [
     {
