--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "Queen-Manu-MD",
-  "description": "whatsapp md bot build with nodejs",
-  "repository": "https://github.com/Senesh18/Queen-Manu-MD",
+  "name": "A17-MD",
+  "description": "A WhatsApp bot based on Baileysjs library (Ts+Js) with Multi Device support",
+  "repository": "https://github.com/Kai0071/A17",
   "logo": "https://wallpapercave.com/wp/wp6471201.jpg",
   "keywords": ["nodejs", "bot", "whatsapp bot", "whatsapp automation", "multi device"],
   "buildpacks": [
@@ -14,5 +14,11 @@
     {
       "url": "https://github.com/clhuang/heroku-buildpack-webp-binaries.git"
     }
-  ]
+  ],
+  "formation": {
+    "worker": {
+      "quantity": 1,
+      "size": "eco"
+    }
+  }
 }
