--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/Senesh18/Queen-Manu-MD.git"
+        "url": "git+https://github.com/Kai0071/A17.git"
     },
     "keywords": [
         "md-bot"
@@ -20,9 +20,9 @@
     "author": "Kai",
     "license": "MIT",
     "bugs": {
-        "url": "https://github.com/Senesh18/Queen-Manu-MD/issues"
+        "url": "https://github.com/Kai0071/A17/issues"
     },
-    "homepage": "https://github.com/Senesh18/Queen-Manu-MD#readme",
+    "homepage": "https://github.com/Kai0071/A17#readme",
     "devDependencies": {
         "@adiwajshing/keyed-db": "^0.2.4",
         "@hapi/boom": "^10.0.1",
